Refactor: Externalize CSS + JS into separate files
- css/style.css: All CSS (998 lines) with fixed asset paths
- js/game.js: All JavaScript (14,869 lines) as single file
- diablo_game.html: Reduced from 15,986 to 117 lines

Browser-verified: title screen, class selection (keyboard),
difficulty selection, game start all working correctly.

Note: Multi-file JS split was attempted but abandoned due to
TDZ (Temporal Dead Zone) issues with let/const across
separate <script> tags.

--- a/diablo_game.html
+++ b/diablo_game.html
@@ -112,20 +112,6 @@
     <div id="mercenaryPanel" class="ui-panel town-panel" style="display:none"></div>
     <div id="gamblingPanel" class="ui-panel town-panel" style="display:none"></div>
 
-    <!-- Data -->
-    <script src="js/data.js"></script>
-    <script src="js/sprites.js"></script>
-    <script src="js/audio.js"></script>
-    <!-- Systems -->
-    <script src="js/effects.js"></script>
-    <script src="js/dungeon.js"></script>
-    <script src="js/items.js"></script>
-    <script src="js/player.js"></script>
-    <script src="js/entities.js"></script>
-    <script src="js/town.js"></script>
-    <!-- UI & Game -->
-    <script src="js/ui.js"></script>
-    <script src="js/save.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/game.js"></script>
 </body>
 </html>
