--- a/diablo_game.html
+++ b/diablo_game.html
@@ -70,10 +70,10 @@
         <h1>GAME OVER</h1>
         <p>Enter / クリックでタイトルへ戻る...</p>
     </div>
-    <div id="gameClearScreen" style="display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.8);z-index:9999;flex-direction:column;justify-content:center;align-items:center;color:#ffaa44;">
-        <h1 style="font-size:48px;text-shadow:0 0 10px #ffaa44;">GAME CLEAR!</h1>
-        <p style="font-size:24px;margin-top:20px;">デモ版をプレイしていただきありがとうございます。</p>
-        <p style="margin-top:40px;color:#aaa;cursor:pointer;">Enter / クリックでタイトルへ戻る...</p>
+    <div id="gameClearScreen">
+        <h1>GAME CLEAR!</h1>
+        <p class="sub-text">デモ版をプレイしていただきありがとうございます。</p>
+        <p class="prompt-text">Enter / クリックでタイトルへ戻る...</p>
     </div>
     <div id="controls-help">
         矢印:移動 | 左クリック:攻撃 | 右クリック:スキル | A:攻撃 | S:スキル | Q:HP薬 | W:MP薬 | 1~6:スキル選択 | Space:拾う | I:装備 | C:キャラ | T:ツリー | R:S編集 | H:手引書
